k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payops-dev
  labels:
    app.kubernetes.io/name: payops
    app.kubernetes.io/environment: dev
