k8s/worker-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: payops-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      containers:
        - name: worker-service
          image: payopsdevacr.azurecr.io/worker-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: payops-dev
spec:
  selector:
    app: worker-service
  ports:
    - port: 8084
      targetPort: 8084
